--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+*{
+  padding:0;
+  margin:0;
+  outline:0;
+  box-sizing:border-box;
+  font-family: Arial;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,body,#root{
+  height:100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+button{
+  cursor:pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container{
+  width:100%;
+  height:100%;
+  background:#000;
 }
 
-.App-link {
-  color: #61dafb;
+.form-container{
+  width:100%;
+  height:100%;
+  max-width:280px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  margin:0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-container img{
+  width:100px;
+  height:100px;
+  border-radius:50%;
+  
+}
+
+.form-container form{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  width:100%;
+  margin-top:20px;
+}
+.form-container form input{
+  width:100%;
+  height:42px;
+  margin:8px 0;
+  padding: 0 0 0 8px;
+  border:1px solid #ccc;
+  border-radius:2px;
+}
+
+.form-container form input:focus{
+  border:2px solid rgb(233, 51, 51);
+}
+
+
+
+
+.form-container form button{
+  width:100%;
+  height:42px;
+  color:#fff;
+  background:rgb(233, 51, 51);
+  font-weight:bold;
+  font-size:18px;
+  border:none;
+  margin-top:4px;
+  border-radius:4px;
+}
+
+.form-container form button:hover{
+ filter:brightness(90%);
 }
