--- a/src/pages/SignIn/styles.css
+++ b/src/pages/SignIn/styles.css
@@ -13,7 +13,7 @@
   width:100px;
   height:100px;
   border-radius:50%;
-  
+
 }
 
 .form-container form{
@@ -23,6 +23,10 @@
   justify-content:center;
   width:100%;
   margin-top:20px;
+}
+
+.form-container p{
+   color:#fff;
 }
 .form-container form input{
   width:100%;
