--- a/src/pages/SignIn/styles.css
+++ b/src/pages/SignIn/styles.css
@@ -16,7 +16,7 @@
 
 }
 
-.form-container form{
+.form-container .form{
   display:flex;
   flex-direction:column;
   align-items:center;
@@ -28,7 +28,7 @@
 .form-container p{
    color:#fff;
 }
-.form-container form input{
+.form-container .form input{
   width:100%;
   height:42px;
   margin:8px 0;
@@ -37,14 +37,14 @@
   border-radius:2px;
 }
 
-.form-container form input:focus{
+.form-container .form input:focus{
   border:2px solid rgb(233, 51, 51);
 }
 
 
 
 
-.form-container form button{
+.form-container .form button{
   width:100%;
   height:42px;
   color:#fff;
@@ -56,6 +56,6 @@
   border-radius:4px;
 }
 
-.form-container form button:hover{
+.form-container .form button:hover{
  filter:brightness(90%);
 }
